[metadata]
name = ddj
version = attr: cca.dd.__version__
url = https://github.com/mstmhsmt/ddj
author = Masatomo Hashimoto
author_email = m.hashimoto@stair.center
license = Apache-2.0
description = Helper scripts for DDJ
long_description = file: README.md

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    cca

[options.packages.find]
where = src

